fix: remove layout jump after solve start on mobile

--- a/src/vscubing/integration.css
+++ b/src/vscubing/integration.css
@@ -29,6 +29,7 @@ body {
   #timer {
     width: 100% !important;
     left: 0 !important;
+    padding-bottom: 0 !important;
   }
   #rtimer {
     bottom: 0 !important;
